[build-system]
requires = ["flit_core >= 3.2, < 4"]
build-backend = "flit_core.buildapi"

[project]
name = "mrfgen-standalone"
authors = [
    { name = "Jacqueline Ryan", email = "Jacqueline.Ryan@jpl.caltech.edu" }
]
description = "Script to automate the process of building and running mrfgen and recording its performance."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    #"awscli ~= 1.32.67",
    "boto3 ~= 1.34.66",
    "docker ~= 7.0.0",
    #"h5netcdf ~= 1.3.0",
    #"lxml ~= 5.1.0",
    #"matplotlib ~= 3.8.3",
    #"netcdf4 ~= 1.6.5",
    #"Pillow ~= 10.2.0",
    #"protobuf ~= 5.26.0",
    #"pyaml ~= 23.12.0",
    #"pypng ~= 0.20220715.0",
    "requests ~= 2.31.0",
    "wheel ~= 0.43.0",
    #"Fiona ~= 1.9.6",
    #"Shapely ~= 2.0.3",
    #"Rtree ~= 1.2.0",
    #"mapbox-vector-tile ~= 2.0.1",
    #"xarray ~= 2024.2.0",
    #"zarr ~= 2.17.1"
]
version = "0.1.0"

[tool.flit.module]
name = "mrf_app"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

# [options]
# py_modules = ["mrf_app"]

[project.scripts]
build-mrfgen = "mrf_app.build_mrfgen:cli"
run-mrfgen = "mrf_app.run_mrfgen:cli"
upload-mrfs = "mrf_app.upload_mrfs:cli"